--- a/content/posts/2018-12-28-react-dom-jsx/index.mdx
+++ b/content/posts/2018-12-28-react-dom-jsx/index.mdx
@@ -29,13 +29,13 @@ Cara termudah untuk mulai menggunakan React adalah menggunakan [CodePen](https:/
 
 <CodeSandbox src="https://codesandbox.io/embed/github/zainfathoni/react/tree/pengenalan-react/0-persiapan/?autoresize=1&view=editor" />
 
-Project di atas bisa Anda _edit_ secara langsung sebagai sarana untuk bereksperimen. Tetapi apabila Anda ingin menjalankannya di komputer Anda secara lokal, tinggal _download_ saja project tersebut, pastikan [NodeJS](https://nodejs.org/en/) sudah terinstall dengan menjalankan perintah `bash…node -v`, lalu jalankan perintah `bash…npm install && npm start` untuk menyalakan aplikasi.
+Project di atas bisa Anda _edit_ secara langsung sebagai sarana untuk bereksperimen. Tetapi apabila Anda ingin menjalankannya di komputer Anda secara lokal, tinggal _download_ saja project tersebut, pastikan [NodeJS](https://nodejs.org/en/) sudah terinstall dengan menjalankan perintah `node -v`, lalu jalankan perintah `npm install && npm start` untuk menyalakan aplikasi.
 
 Di project tersebut terdapat tiga buah file, yaitu file JavaScript `index.js`, HTML `index.html`, dan JSON `package.json`. Kita akan bedah satu persatu file tersebut.
 
 ## 1. ReactDOM
 
-File `index.js` ini berisikan contoh penggunaan React yang paling sederhana. Di sini kita meng-`js…import` dua _library_, yaitu **React** & **ReactDOM**. Kegunaan ReactDOM di sini cukup jelas, yaitu me-_render_ sesuatu ke sebuah HTML element yang memiliki `html…id=root`. Coba buka file `index.html`, pada baris ke-30 akan Anda temukan `html…<div id="root"></div>`. Di situlah aplikasi React kita ini akan dipasang nantinya.
+File `index.js` ini berisikan contoh penggunaan React yang paling sederhana. Di sini kita meng-`import` dua _library_, yaitu **React** & **ReactDOM**. Kegunaan ReactDOM di sini cukup jelas, yaitu me-_render_ sesuatu ke sebuah HTML element yang memiliki `id=root`. Coba buka file `index.html`, pada baris ke-30 akan Anda temukan `<div id="root"></div>`. Di situlah aplikasi React kita ini akan dipasang nantinya.
 
 ```jsx {2,4,6}
 import React from "react";
@@ -46,8 +46,8 @@ ReactDOM.render(<h1>Hello, world!</h1>, document.getElementById("root"));
 
 ## 2. React
 
-Nah, yang agak aneh adalah, untuk apa kita meng-`js…import` **React**, padahal di situ tidak terlihat sama sekali penggunaan React?
-Untuk mengujinya, coba sekarang tambahkan `js…//` di depan `js…import React from 'react'` untuk menjadikannya komentar dan tidak terbaca oleh JavaScript.
+Nah, yang agak aneh adalah, untuk apa kita meng-`import` **React**, padahal di situ tidak terlihat sama sekali penggunaan React?
+Untuk mengujinya, coba sekarang tambahkan `//` di depan `import React from 'react'` untuk menjadikannya komentar dan tidak terbaca oleh JavaScript.
 Maka yang Anda lihat adalah pesan error seperti ini:
 
 <CodeSandbox src="https://codesandbox.io/embed/github/zainfathoni/react/tree/pengenalan-react/2-react/?autoresize=1&fontsize=13&view=split" />
@@ -77,13 +77,13 @@ ReactDOM.render(
 )
 ```
 
-Nah, di sini baru terlihat bahwa ternyata `js…React` memang dibutuhkan di baris ini. Transformasi _source code_ JavaScript semacam ini dimungkinkan berkat adanya [Babel](https://babeljs.io/). Lebih dalam tentang Babel akan saya bahas pada tulisan lainnya, bagi yang masih penasaran, dapat mencoba bermain-main dengannya [di sini](https://babeljs.io/repl/#?presets=react).
+Nah, di sini baru terlihat bahwa ternyata `React` memang dibutuhkan di baris ini. Transformasi _source code_ JavaScript semacam ini dimungkinkan berkat adanya [Babel](https://babeljs.io/). Lebih dalam tentang Babel akan saya bahas pada tulisan lainnya, bagi yang masih penasaran, dapat mencoba bermain-main dengannya [di sini](https://babeljs.io/repl/#?presets=react).
 
 Untuk bisa menggunakan JSX di React dengan baik, kita harus mampu membedakan antara **_Expression_** dan **_Statement_** di JavaScript. Saya akan menjelaskan perbedaan antara keduanya di tulisan yang akan datang, tapi sambil menunggu, sementara ini silakan coba baca dulu saja artikel [_Expressions versus statements in JavaScript_](http://2ality.com/2012/09/expressions-vs-statements.html) ini.
 
 ### 3.1 Menggunakan _Expression_ di JSX
 
-Dengan JSX, kita bisa membuat HTML yang dinamis. Caranya adalah dengan memasukkan _expression_ ke dalam JSX, dan mengapitnya dengan karakter kurung kurawal `js…{}` seperti ini:
+Dengan JSX, kita bisa membuat HTML yang dinamis. Caranya adalah dengan memasukkan _expression_ ke dalam JSX, dan mengapitnya dengan karakter kurung kurawal `{}` seperti ini:
 
 ```jsx {2}
 ReactDOM.render(
@@ -98,9 +98,9 @@ Sebagai contoh, amati bagaimana cara saya membuat kalimat `Hello, world!` sebelu
 
 ### 3.2 JSX adalah _Expression_
 
-Selain bisa mengandung _Expression_, ternyata JSX itu sendiri merupakan _Expression_. Jadi setelah di-_compile_ oleh [Babel](https://babeljs.io/), JSX akan diganti menjadi pemanggilan fungsi `js…React.createElement()` yang menghasilkan objek JavaScript.
+Selain bisa mengandung _Expression_, ternyata JSX itu sendiri merupakan _Expression_. Jadi setelah di-_compile_ oleh [Babel](https://babeljs.io/), JSX akan diganti menjadi pemanggilan fungsi `React.createElement()` yang menghasilkan objek JavaScript.
 
-Dengan demikian, kita bisa memperlakukannya sebagaimana _Expression_ JavaScript pada umumnya. Misalnya, menjadikannya sebagai nilai kembalian dari sebuah fungsi. Kita coba ganti JSX di atas dengan pemanggilan sebuah fungsi `js…greet(name)`. Coba kosongkan parameter di pemanggilan fungsi `js…greet()` dan amati hasilnya!
+Dengan demikian, kita bisa memperlakukannya sebagaimana _Expression_ JavaScript pada umumnya. Misalnya, menjadikannya sebagai nilai kembalian dari sebuah fungsi. Kita coba ganti JSX di atas dengan pemanggilan sebuah fungsi `greet(name)`. Coba kosongkan parameter di pemanggilan fungsi `greet()` dan amati hasilnya!
 
 <CodeSandbox src="https://codesandbox.io/embed/github/zainfathoni/react/tree/pengenalan-react/3-2-jsx-adalah-expression/?autoresize=1&fontsize=12&view=split" />
 
