--- a/content/posts/2019-12-14-hello-world/index.mdx
+++ b/content/posts/2019-12-14-hello-world/index.mdx
@@ -4,6 +4,7 @@ author: Muhammad Irwan Andriawan
 date: 2019-12-14
 hero: ./images/hero.jpg
 excerpt: This is a Hello World Sample Pages
+secret: true
 ---
 
 # Hello world from Andriawan
