--- a/content/posts/2018-12-28-react-dom-jsx/index.mdx
+++ b/content/posts/2018-12-28-react-dom-jsx/index.mdx
@@ -47,7 +47,10 @@ File `index.js` ini berisikan contoh penggunaan React yang paling sederhana. Di 
 import React from "react";
 import ReactDOM from "react-dom";
 
-ReactDOM.render(<h1>Hello, world!</h1>, document.getElementById("root"));
+ReactDOM.render(
+  <h1>Hello, world!</h1>,
+  document.getElementById("root")
+);
 ```
 
 ## React
@@ -160,16 +163,17 @@ Sebagaimana HTML biasa, JSX juga bisa menerima _attributes_ & _children_. Hanya 
 
 Sebagai contoh, untuk menghasilkan _tag_ HTML yang seperti ini:
 
-```html
+```html {1-3}
 <label for="email" class="clearfix">
-  <input id="email" tabindex="1" /> <br />
+  <input id="email" tabindex="1" />
+  <br>
   Email
 </label>
 ```
 
 Kita harus menuliskan JSX seperti ini:
 
-```jsx
+```jsx {1-3}
 <label htmlFor="email" className="clearfix">
   <input id="email" tabIndex="1" />
   <br />
