Update hero image

--- a/content/posts/2018-12-28-react-dom-jsx/index.mdx
+++ b/content/posts/2018-12-28-react-dom-jsx/index.mdx
@@ -3,7 +3,7 @@ title: Mengenal React, React DOM, dan JSX
 slug: react-dom-jsx
 author: Zain Fathoni
 date: 2018-12-28
-hero: ./images/hero.jpg
+hero: ./images/PK_Twitch_Banner.png
 excerpt: Pengantar awal library React, React DOM, dan syntax JSX beserta latar belakangnya.
 ---
 
